--- a/demo/my-portfolio/src/components/css/AboutMe.css
+++ b/demo/my-portfolio/src/components/css/AboutMe.css
@@ -8,10 +8,10 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
   max-width: 80%;
-  height: 100vh;
   margin: 0 auto;
-  color:  black;
+  color: black;
   box-sizing: border-box;
+  height: 100vh;
 }
 
 .profile-image img {
@@ -24,6 +24,12 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.about-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .bio {
   flex: 1;
   padding: 20px;
@@ -31,7 +37,7 @@
 
 .bio h2 {
   font-size: 2.5rem;
-  color: black
+  color: black;
 }
 
 .bio p {
@@ -44,7 +50,7 @@
 .bio h3 {
   font-size: 1.8rem;
   margin-top: 20px;
-  color: black
+  color: black;
 }
 
 .bio ul {
@@ -58,6 +64,7 @@
   margin: 8px 0;
 }
 
+/* Responsive Design for Tablets and Small Screens */
 @media (max-width: 1024px) {
   .about-me {
     padding: 30px 15px;
