--- a/demo/my-portfolio/src/App.css
+++ b/demo/my-portfolio/src/App.css
@@ -386,7 +386,7 @@ h1, h2, h3, p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: #223727;
   padding: 15px 30px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   position: sticky;
@@ -396,7 +396,7 @@ h1, h2, h3, p {
 }
 
 .logo img {
-  height: 25px;
+  height: 100px;
 }
 
 .nav-links {
@@ -406,7 +406,7 @@ h1, h2, h3, p {
 }
 
 .nav-links li a {
-  color: var(--shades-of-olive-dark);
+  color: var(--white);
   font-weight: 600;
   transition: color 0.3s ease;
 }
@@ -443,11 +443,11 @@ h1, h2, h3, p {
   }
 }
 .footer {
-  background-color: rgba(255, 255, 255, 0.85);
+  background-color: #223727;
   text-align: center;
   padding: 20px;
   font-size: 0.95rem;
-  color: var(--shades-of-olive-dark);
+  color: white;
   border-top: 1px solid var(--pale-brown);
   backdrop-filter: blur(5px);
 }
