--- a/src/App.css
+++ b/src/App.css
@@ -447,6 +447,7 @@ h1, h2, h3, p {
   color: white;
   border-top: 1px solid var(--pale-brown);
   backdrop-filter: blur(5px);
+  flex-shrink: 0;
 }
 
 html, body {
@@ -456,14 +457,11 @@ html, body {
 }
 
 .content-wrapper {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex: 1 0 auto
 }
 
 .main-wrapper {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* full viewport height */
 }
