--- a/src/App.css
+++ b/src/App.css
@@ -428,6 +428,7 @@ h1, h2, h3, p {
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    min-height: 100vh;
   }
 
   .header {
@@ -447,7 +448,6 @@ h1, h2, h3, p {
   color: white;
   border-top: 1px solid var(--pale-brown);
   backdrop-filter: blur(5px);
-  flex-shrink: 0;
 }
 
 html, body {
